feat: added roles and further improvements